T: 53 - add test which check delete work can't delete champion